test hiking routes
